# euler-angles-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml
euler_angles_pytorch/: __init__.py  euler_to_matrix.py  matrix_to_euler.py
tests/: test_roundtrip.py
